monticore-generator/src/test/resources/cocos/valid/SubGrammarWithSymbol.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.valid;

grammar SubGrammarWithSymbol extends mc.grammars.types.TestTypes{

  symbol SubSymbol = Name "sub";

  SubNonTer = Name "NonTer";

  scope SubScope = Name;
}
