monticore-generator/src/test/resources/cocos/invalid/A4008/A4008d.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4008;

grammar A4008d extends mc.grammars.types.TestTypes {

  external ArrayType;

}
